<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorOrange">

    <TextView
        android:id="@+id/tvBillAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_msg_billamount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBillAmount"
        android:layout_marginTop="20dp"
        android:hint="@string/main_hint_billamount"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="numberDecimal"
        android:cursorVisible="false"
        android:background="@android:color/transparent"/>

    <View
        android:id="@+id/vRatingButtons"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/etBillAmount"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorGrey"
        />

    <LinearLayout
        android:id="@+id/rlRatingButtons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/vRatingButtons"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibRegularservice"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_buttons"
            android:layout_weight="1"
            android:backgroundTint="@color/colorOrange"
            android:src="@drawable/emoticon_sad"/>

        <ImageButton
            android:id="@+id/ibGoodservice"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_buttons"
            android:layout_weight="1"
            android:backgroundTint="@color/colorOrange"
            android:src="@drawable/emoticon_happy_outline"/>
        <ImageButton
            android:id="@+id/ibExcellentservice"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_buttons"
            android:layout_weight="1"
            android:backgroundTint="@color/colorOrange"
            android:src="@drawable/emoticon_outline"/>
    </LinearLayout>
    <View
        android:id="@+id/vRatingSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rlRatingButtons"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorGrey"
        />
    <TextView
        android:id="@+id/tvServiceRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_msg_servicerating"
        android:layout_below="@+id/vRatingSeparator"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <LinearLayout
        android:id="@+id/llTipInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvServiceRating"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTipPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/main_msg_tippercent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tvTipAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/main_msg_tiptotal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
    <View
        android:id="@+id/vBillSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llTipInformation"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#fff"
        />
    <TextView
        android:id="@+id/tvBillTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vBillSeparator"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAllCaps="true"
        android:text="@string/main_msg_billtotal"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/tvBillTotalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBillTotal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAllCaps="true"
        android:text="@string/main_msg_billtotalresult"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

</RelativeLayout>